--- a/views/home.hbs
+++ b/views/home.hbs
@@ -84,7 +84,7 @@
             <div class="navbar-brand">
               <a class="logo" href="/">
                 <img class="logo-alt-img" src="./img/logo_only1.png" alt="logo" />
-                <img class="logo-img logofix" src="./img/logo_only1.png" alt="logo">
+                <img class="logo-img logofix" src="./img/image.png" alt="logo">
               </a>
             </div>
             <!-- /Logo -->
@@ -209,7 +209,7 @@
         </div>
       </div>
     </div>
-  <!-- /Hero -->
+    <!-- /Hero -->
 
 
     <!-- About -->
@@ -419,12 +419,13 @@
           <div class="row">
             <div class="row">
               <div class="section-title">
-                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes worth more than Rs 33 Lakhs</span></h3>
+                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes worth more than Rs 33
+                    Lakhs</span></h3>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content text-center" style="background: linear-gradient(to top left, #3a6186, #89253e);">
+              <div class="front content text-center" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
                 <h2>1st Prize</h2>
                 {{!-- <h1>&#x20B9; 10,000</h1> --}}
                 <p>
@@ -433,12 +434,14 @@
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati magni?
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati
+                  magni?
                 </p>
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content text-center" style="background: linear-gradient(to top left, #ffa17f, #00223e);">
+              <div class="front content text-center"
+                style="background: linear-gradient(to top left, #48c6ef, #6f86d6);">
                 <h2>2nd Prize</h2>
                 <p>
                   To be announced...
@@ -446,12 +449,13 @@
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati magni?
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati
+                  magni?
                 </p>
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content text-center" style="background: linear-gradient(to top left, #1CB5E0, #ffaf40)">
+              <div class="front content text-center" style="background: linear-gradient(to top left, #059250, #15C26C)">
                 <h2>3rd Prize</h2>
                 <p>
                   To be announced...
@@ -459,7 +463,8 @@
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati magni?
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati
+                  magni?
                 </p>
               </div>
             </div>
@@ -775,74 +780,49 @@
       <!-- /Contact -->
     </div>
     <!-- Footer -->
-      <footer id="footer">
-          <!-- container -->
-          <div class="wave_box container">
-              <!-- row -->
-              <div class="row">
-                  <!-- footer logo -->
-                  <div class="col-md-4">
-                      <div class="footer-brand">
-                          <a class="logo" href="/">
-                              <img
-                                  class="logo-img"
-                                  src="./img/logo_only1.png"
-                                  alt="logo"
-                              />
-                          </a>
-                          <span>Dot</span><span>Slash</span
-                            ><span> 4.0</span>
-                      </div>
-                  </div>
-                  <!-- /footer logo -->
-                  
-                  <!-- contact social -->
-                  <div class="col-md-8">
-                      <div class="contact-social">
-                          <a
-                              href="https://www.facebook.com/hackatdotslash/"
-                              rel="noopener noreferrer"
-                              target="_blank"
-                              ><i class="fa fa-facebook"></i
-                          ></a>
-                          <a
-                              href="https://twitter.com/hackatdotslash"
-                              rel="noopener noreferrer"
-                              target="_blank"
-                              ><i class="fa fa-twitter"></i
-                          ></a>
-                          <a
-                              href="https://www.instagram.com/hackatdotslash/"
-                              target="_blank"
-                              ><i class="fa fa-instagram"></i
-                          ></a>
-                          <a
-                              href="https://www.linkedin.com/company/hackatdotslash/"
-                              rel="noopener noreferrer"
-                              target="_blank"
-                          >
-                              <i class="fa fa-linkedin"></i>
-                          </a>
-                          <a
-                              href="mailto:hackatdotslash@gmail.com"
-                              target="_blank"
-                              ><i class="fa fa-envelope"></i
-                          ></a>
-                      </div>
-                  </div>
-                  <!-- /contact social -->
-                  <div class="coc">
-                      <a href="/coc">Code of Conduct</a>
-                    </div>
-                    <div class="copyright">
-                      ©2021 DOTSLASH
-                  </div>
-              </div>
-              <!-- /row -->
+    <footer id="footer">
+      <!-- container -->
+      <div class="wave_box container">
+        <!-- row -->
+        <div class="row">
+          <!-- footer logo -->
+          <div class="col-md-4">
+            <div class="footer-brand">
+              <a class="logo" href="/">
+                <img class="logo-img" src="./img/logo_only1.png" alt="logo" />
+              </a>
+              <span>Dot</span><span>Slash</span><span> 4.0</span>
+            </div>
           </div>
-          <!-- /container -->
-      </footer>
-      <!-- /Footer -->
+          <!-- /footer logo -->
+
+          <!-- contact social -->
+          <div class="col-md-8">
+            <div class="contact-social">
+              <a href="https://www.facebook.com/hackatdotslash/" rel="noopener noreferrer" target="_blank"><i
+                  class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/hackatdotslash" rel="noopener noreferrer" target="_blank"><i
+                  class="fa fa-twitter"></i></a>
+              <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/hackatdotslash/" rel="noopener noreferrer" target="_blank">
+                <i class="fa fa-linkedin"></i>
+              </a>
+              <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+            </div>
+          </div>
+          <!-- /contact social -->
+          <div class="coc">
+            <a href="/coc">Code of Conduct</a>
+          </div>
+          <div class="copyright">
+            ©2021 DOTSLASH
+          </div>
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </footer>
+    <!-- /Footer -->
   </div>
   <!-- jQuery Plugins -->
   <script src="js/jquery.min.js"></script>
