--- a/views/home.hbs
+++ b/views/home.hbs
@@ -301,11 +301,12 @@
             </div>
             <!-- /galery item -->
 
+            {{!--
             <!-- galery item -->
             <div class="galery-item">
               <img src="./img/galery/new_7.jpg" alt="">
             </div>
-            <!-- /galery item -->
+            <!-- /galery item --> --}}
 
             <!-- galery item -->
             <div class="galery-item">
@@ -325,11 +326,12 @@
             </div>
             <!-- /galery item -->
 
+            {{!--
             <!-- galery item -->
             <div class="galery-item">
               <img src="./img/galery/new_12.jpg" alt="">
             </div>
-            <!-- /galery item -->
+            <!-- /galery item --> --}}
 
             <!-- galery item -->
             <div class="galery-item">
@@ -419,11 +421,10 @@
           <div class="row">
             <div class="row">
               <div class="section-title">
-                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes worth more than Rs 33
-                    Lakhs</span></h3>
+                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes</span></h3>
               </div>
             </div>
-
+            <h2 style="text-align: center;">Worth more than 33 Lakhs!! 🤩</h2>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
                 <h2>1st Prize</h2>
@@ -455,7 +456,7 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content text-center" style="background: linear-gradient(to top left, #059250, #15C26C)">
+              <div class="front content text-center" style="background: linear-gradient(to top left, #1AF589, #15C26C)">
                 <h2>3rd Prize</h2>
                 <p>
                   To be announced...
