--- a/views/home.hbs
+++ b/views/home.hbs
@@ -55,12 +55,6 @@
       -o-transition: all 300ms ease-in-out;
       transition: all 300ms ease-in-out;
     }
-
-    .logofixer {
-      position: relative;
-      top: 10px;
-      width: 250px;
-    }
   </style>
 
 </head>
@@ -84,7 +78,7 @@
             <div class="navbar-brand">
               <a class="logo" href="/">
                 <img class="logo-alt-img" src="./img/logo_only1.png" alt="logo" />
-                <img class="logo-img logofix" src="./img/image.png" alt="logo">
+                <img class="logo-img" src="./img/logo_only1.png" alt="logo">
               </a>
             </div>
             <!-- /Logo -->
@@ -372,7 +366,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-title">
-            <h3 class="title"><span style="color:#000;">The &nbsp;</span><span style="color: #bd0c0e;"> Hackathon</span>
+            <h3 class="title"><span style="color: #0b0f28">The &nbsp;</span><span> Hackathon</span>
             </h3>
           </div>
         </div>
@@ -421,10 +415,10 @@
           <div class="row">
             <div class="row">
               <div class="section-title">
-                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes</span></h3>
+                <h3 class="title"><span>Prizes</span></h3>
               </div>
             </div>
-            <h2 style="text-align: center;">Worth more than 33 Lakhs!! 🤩</h2>
+            <h2 style="text-align: center;">Worth more than 33 Lakhs!!</h2>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
                 <h2>1st Prize</h2>
@@ -479,7 +473,7 @@
         <div class="container">
           <div class="row">
             <div class="section-title">
-              <h3 class="title"><span style="color:#000;">Our &nbsp;</span><span style="color: #bd0c0e;">sponsors</span>
+              <h3 class="title"><span style="color: #0b0f28">Our &nbsp;</span><span style="color: #bd0c0e;">sponsors</span>
               </h3>
             </div>
             <div style="display: flex;
@@ -567,7 +561,7 @@
             <div class="section-title"
               style="display: flex; flex-wrap: wrap-reverse; flex-flow: column-reverse; align-items: center; justify-content: center;">
               <div style="display: flex;">
-                <h3 class="title"><span style="color: #000;">Frequently Asked &nbsp;</span><span
+                <h3 class="title"><span style="color: #0b0f28">Frequently Asked &nbsp;</span><span
                     style="color: #bd0c0e;">Questions</span></h3>
               </div>
               <img src="img/faq.svg" alt="faq">
@@ -739,7 +733,7 @@
           <div class="row">
             <!-- section title -->
             <div class="section-title">
-              <h3 class="title"><span style="color: #000;">Contact &nbsp;</span><span
+              <h3 class="title"><span style="color: #0b0f28">Contact &nbsp;</span><span
                   style="color: #bd0c0e;">Info</span>
               </h3>
             </div>
