micro: prizes card font color changed

--- a/public/sass/_prizes.scss
+++ b/public/sass/_prizes.scss
@@ -15,11 +15,11 @@
             background: #313131;
             border-radius: 25px;
             h2, h1{
-                color: #ddd;
+                color: #fff;
             }
             p {
                 line-height: 160%;
-                color: #ddd;
+                color: #fff;
             }
         }
         .front{
