--- a/views/home.hbs
+++ b/views/home.hbs
@@ -516,9 +516,18 @@
               <a href="https://interwebs.host/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/interwebshost.png" alt="">
               </a>
+              <a href="https://www.interviewcake.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/interview_cake_logo.png" alt="">
+              </a>
+              <a href="https://www.framer.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/framer.svg" alt="">
+              </a>
               <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor"
                 rel="noopener noreferrer">
                 <img src="img/Hackathons_International_Logo.png" alt="">
+              </a>
+              <a href="https://1password.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/1P.png" alt="">
               </a>
               <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/balsamiq.svg" alt="">
@@ -536,6 +545,60 @@
         </div>
         <!-- /Sponsors -->
       </div>
+
+      <!-- Community Partners -->
+      <div id="community-partners" class="section">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-title">
+              <h3 class="title"><span style="color:#000;">Community &nbsp;</span><span
+                  style="color: #bd0c0e;">Partners</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;">
+              <a href="http://nitsurat.acm.org/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/acm_logo.png" alt="">
+              </a>
+              <a href="https://dsc-nitsurat.netlify.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/dscnitsurat.png" alt="">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+        <!-- /community partners  -->
+      </div>
+
+      <!-- Community Partners -->
+      <div id="internship-partners" class="section">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-title">
+              <h3 class="title"><span style="color:#000;">Internship &nbsp;</span><span
+                  style="color: #bd0c0e;">Partners</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                          flex-wrap: wrap;
+                          justify-content: center;
+                          align-items: center;">
+              <a href="https://www.mergeintern.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/merge.png" alt="">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+        <!-- /community partners  -->
+      </div>
+
       <!-- become-sponsor -->
       <div id="become-sponsor" class="section">
         <img class="dotted-line" src="img/background_dotted_line.svg" alt="line">
@@ -808,7 +871,7 @@
               <a href="https://www.linkedin.com/company/hackatdotslash/" rel="noopener noreferrer" target="_blank">
                 <i class="fa fa-linkedin"></i>
               </a>
-              <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+              <a href="mailto:darshil@hackdotslash.co.in" target="_blank"><i class="fa fa-envelope"></i></a>
             </div>
           </div>
           <!-- /contact social -->
