--- a/views/home.hbs
+++ b/views/home.hbs
@@ -539,42 +539,14 @@
         </div>
         <!-- /Sponsors -->
       </div>
-
-      <!-- Community Partners -->
-      <div id="community-partners" class="section">
+      <!-- internship Partners -->
+      <div id="internship-partners">
         <!-- container -->
         <div class="container">
           <div class="row">
-            <div class="section-title">
-              <h3 class="title"><span style="color:#000;">Community &nbsp;</span><span
-                  style="color: #bd0c0e;">Partners</span>
-              </h3>
-            </div>
-            <div style="display: flex;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    align-items: center;">
-              <a href="http://nitsurat.acm.org/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/acm_logo.png" alt="">
-              </a>
-              <a href="https://dsc-nitsurat.netlify.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/dscnitsurat.png" alt="">
-              </a>
-            </div>
-            <!-- /row -->
-          </div>
-          <!-- /container -->
-        </div>
-        <!-- /community partners  -->
-      </div>
-
-      <!-- Community Partners -->
-      <div id="internship-partners" class="section">
-        <!-- container -->
-        <div class="container">
-          <div class="row">
-            <div class="section-title">
-              <h3 class="title"><span style="color:#000;">Internship &nbsp;</span><span
+            <div class="section-subtitle">
+            <div class="line"></div>
+              <h3 class="title"><span style="color:#000;">Internship&nbsp;</span><span
                   style="color: #bd0c0e;">Partners</span>
               </h3>
             </div>
@@ -590,8 +562,39 @@
           </div>
           <!-- /container -->
         </div>
-        <!-- /community partners  -->
       </div>
+      <!-- /internship partners  -->
+
+      <!-- Community Partners -->
+      <div id="community-partners" class="section">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-subtitle">
+              <div class="line"></div>
+              <h3 class="title"><span style="color:#000;">Community&nbsp;</span><span
+                  style="color: #bd0c0e;">Partners</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;">
+              <a href="http://nitsurat.acm.org/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/acm_logo.png" alt="" style="max-height: 100px; width: auto;">
+              </a>
+              <a href="https://dsc-nitsurat.netlify.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/dscnitsurat.png" alt="" style="height: 100px;width: auto;">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+      </div>
+      <!-- /community partners  -->
+
+      
 
       <!-- become-sponsor -->
       <div id="become-sponsor" class="section">
