minor: hero banner height issue fixed

--- a/public/sass/herostyles.scss
+++ b/public/sass/herostyles.scss
@@ -3,8 +3,8 @@ $primary-text: #ddd;
 
 .hero__content{
     position: relative;
-    top: 50px;
-    margin: 0 100px;
+    padding: 0 100px;
+    padding-top: 100px;
     .row{
         display: flex;
         justify-content: space-between;
@@ -44,7 +44,6 @@ $primary-text: #ddd;
             margin-bottom: 30px;
         }
         .hackathon__details{
-            margin-top: 55px;
             width: fit-content;
             &__title{
                 font-family: lato;
