--- a/public/sass/background.scss
+++ b/public/sass/background.scss
@@ -13,7 +13,7 @@ $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   // background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   // background: radial-gradient(ellipse at bottom, #ee0303 0%, #0e0d0d 100%);
   // background: radial-gradient(ellipse at bottom, #ee0303 0%, #00172c 100%);
