minor: mobile hero banner issue fixed

--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -4,6 +4,7 @@
         background-position: center;
         height: 1200px;
         &__content{
+            top: 50px;
             .row{
                 display: block;
             }
