--- a/views/home.hbs
+++ b/views/home.hbs
@@ -564,6 +564,31 @@
         </div>
       </div>
       <!-- /internship partners  -->
+      <!-- media Partners -->
+      <div id="media-partners">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-subtitle">
+              <div class="line"></div>
+              <h3 class="title"><span style="color:#000;">Media&nbsp;</span><span
+                  style="color: #bd0c0e;">Partner</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;">
+              <a href="https://dubeat.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/du-beat.jpeg" alt="">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+      </div>
+      <!-- /media partners  -->
 
       <!-- Community Partners -->
       <div id="community-partners" class="section">
@@ -593,8 +618,6 @@
         </div>
       </div>
       <!-- /community partners  -->
-
-      
 
       <!-- become-sponsor -->
       <div id="become-sponsor" class="section">
