remove track from registration form

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -345,7 +345,7 @@
                 <label for="textarea1">Any special needs?</label>
               </div>
             </div>
-            <div class="row">
+            {{!-- <div class="row">
               <div class="input-field col s6 res" style="margin-top: 0">
                 <label>Which Track would you like to Hack?</label><br><br>
                 <p>
@@ -361,7 +361,7 @@
                   </label>
                 </p>
               </div>
-            </div>
+            </div> --}}
             <div class="row">
               <div class="input-field col s6 res" style="margin-top: 0">
                 <label>New to Hackathons?</label><br><br>
