--- a/views/home.hbs
+++ b/views/home.hbs
@@ -473,7 +473,8 @@
         <div class="container">
           <div class="row">
             <div class="section-title">
-              <h3 class="title"><span style="color: #0b0f28">Our &nbsp;</span><span style="color: #bd0c0e;">sponsors</span>
+              <h3 class="title"><span style="color: #0b0f28">Our &nbsp;</span><span
+                  style="color: #bd0c0e;">sponsors</span>
               </h3>
             </div>
             <div style="display: flex;
@@ -526,6 +527,9 @@
               <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/balsamiq.svg" alt="">
               </a>
+              <a href="https://www.voiceflow.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/voiceflow_logo.png" alt="" style="width: 15rem;">
+              </a>
               <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
@@ -545,7 +549,7 @@
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-            <div class="line"></div>
+              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Internship&nbsp;</span><span
                   style="color: #bd0c0e;">Partners</span>
               </h3>
@@ -556,6 +560,9 @@
                           align-items: center;">
               <a href="https://www.mergeintern.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/merge.png" alt="">
+              </a>
+              <a href="https://codingblocks.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/coding-blocks-logo.png" alt="">
               </a>
             </div>
             <!-- /row -->
@@ -571,8 +578,7 @@
           <div class="row">
             <div class="section-subtitle">
               <div class="line"></div>
-              <h3 class="title"><span style="color:#000;">Media&nbsp;</span><span
-                  style="color: #bd0c0e;">Partner</span>
+              <h3 class="title"><span style="color:#000;">Media&nbsp;</span><span style="color: #bd0c0e;">Partner</span>
               </h3>
             </div>
             <div style="display: flex;
@@ -610,6 +616,9 @@
               </a>
               <a href="https://dsc-nitsurat.netlify.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/dscnitsurat.png" alt="" style="height: 100px;width: auto;">
+              </a>
+              <a href="https://oppspot.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/oppspot_logo.jfif" alt="" style="height: 100px;width: auto;">
               </a>
             </div>
             <!-- /row -->
