micro: sponsor moved

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -527,6 +527,9 @@
               <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/balsamiq.svg" alt="">
               </a>
+              <a href="https://codingblocks.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/coding-blocks-logo.png" alt="">
+              </a>
               <a href="https://www.voiceflow.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/voiceflow_logo.png" alt="" style="width: 15rem;">
               </a>
@@ -551,7 +554,7 @@
             <div class="section-subtitle">
               <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Internship&nbsp;</span><span
-                  style="color: #bd0c0e;">Partners</span>
+                  style="color: #bd0c0e;">Partner</span>
               </h3>
             </div>
             <div style="display: flex;
@@ -560,9 +563,6 @@
                           align-items: center;">
               <a href="https://www.mergeintern.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/merge.png" alt="">
-              </a>
-              <a href="https://codingblocks.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/coding-blocks-logo.png" alt="">
               </a>
             </div>
             <!-- /row -->
