micro: sponsor added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -521,6 +521,9 @@
                 rel="noopener noreferrer">
                 <img src="img/Hackathons_International_Logo.png" alt="">
               </a>
+              <a href="https://www.elastic.co/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/elastic_logo.png" alt="">
+              </a>
               <a href="https://1password.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/1P.png" alt="">
               </a>
