change sponsors title and add platform partner

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -467,20 +467,66 @@
         </div>
       </div>
 
+
+
       <!-- Current-Sponsors -->
       <div id="sponsors" class="section">
         <!-- container -->
         <div class="container">
           <div class="row">
             <div class="section-title">
-              <h3 class="title"><span style="color: #0b0f28">Our &nbsp;</span><span
-                  style="color: #bd0c0e;">sponsors</span>
+              <h3 class="title"><span style="color: #0b0f28">Sponsors &nbsp;</span><span style="color: #bd0c0e;">/
+                  Partners</span>
+              </h3>
+            </div>
+
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+        <!-- /Sponsors -->
+      </div>
+
+      <!-- platform Partner -->
+      <div id="platform-partner">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-subtitle">
+              <div class="line"></div>
+              <h3 class="title"><span style="color:#000;">Platform &nbsp;</span><span
+                  style="color: #bd0c0e;">Partner</span>
               </h3>
             </div>
             <div style="display: flex;
-              flex-wrap: wrap;
-              justify-content: center;
-              align-items: center;">
+                                      flex-wrap: wrap;
+                                      justify-content: center;
+                                      align-items: center;">
+              <a href="https://bit.ly/2VKyFW1" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/airmeet_logo.svg" alt="">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+        <!-- /platform partner  -->
+      </div>
+
+      {{!-- Our-sponsors --}}
+      <div id="sponsors">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-subtitle">
+              <div class="line"></div>
+              <h3 class="title"><span style="color:#000;">Our &nbsp;</span><span style="color: #bd0c0e;">Sponsors</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                                      flex-wrap: wrap;
+                                      justify-content: center;
+                                      align-items: center;">
               <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/github-logo.jpg" alt="">
               </a>
@@ -517,6 +563,9 @@
               <a href="https://www.framer.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/framer.svg" alt="">
               </a>
+              <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/onli_logo.jpeg" alt="">
+              </a>
               <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor"
                 rel="noopener noreferrer">
                 <img src="img/Hackathons_International_Logo.png" alt="">
@@ -547,8 +596,9 @@
           </div>
           <!-- /container -->
         </div>
-        <!-- /Sponsors -->
+        <!-- /platform partner  -->
       </div>
+
       <!-- internship Partners -->
       <div id="internship-partners">
         <!-- container -->
