add sponsor challenges, micro: modify materialize-css path

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -98,6 +98,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#prizes">Prizes</a></li>
               <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="#sponsorChallenges">Challenges</a></li>
               <li><a href="#faq">FAQs</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -467,8 +468,6 @@
         </div>
       </div>
 
-
-
       <!-- Current-Sponsors -->
       <div id="sponsors" class="section">
         <!-- container -->
@@ -514,7 +513,7 @@
       </div>
 
       {{!-- Our-sponsors --}}
-      <div id="sponsors">
+      <div id="our-sponsors">
         <!-- container -->
         <div class="container">
           <div class="row">
@@ -681,6 +680,51 @@
       </div>
       <!-- /community partners  -->
 
+      <!-- SponsorChallenges -->
+      <div id="sponsorChallenges" class="section">
+        <div class="row">
+          <div class="section-title">
+            <h3 class="title"><span style="color: #0b0f28">Sponsor &nbsp;</span><span style="color: #bd0c0e;">
+                Challenges</span>
+            </h3>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row" style="display: flex;
+                          flex-wrap: wrap;
+                          justify-content: center;
+                          align-items: center;">
+
+            <div class="col-md-4 col-sm-4 col-xs-12 flip" style="display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;">
+              <div class="front content text-center"
+                style="background: linear-gradient(to top left, #F7736F, #F5372A);">
+                <h2>SASHIDO challenge</h2>
+                <p>
+                  Register for a 45-day SashiDo free trial, create a ML project with SashiDo & Teachable Machine by
+                  Google and get a chance to win amazing prizes and Internship Opportunities
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-12 flip" style="display: flex;
+                                flex-wrap: wrap;
+                                justify-content: center;
+                                align-items: center;">
+              <div class="front content text-center"
+                style="background: linear-gradient(to top left, #434343, #000000);">
+                <h2>EchoAR Challenge</h2>
+                <p>
+                  Only for participants who have used EchoAR in their project.
+                  Win $50 amazon gift card, 1 month free Business Tier access and a Feature in our newsletter(sent to
+                  investors and AR/VR ecosystem)
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- become-sponsor -->
       <div id="become-sponsor" class="section">
         <img class="dotted-line" src="img/background_dotted_line.svg" alt="line">
@@ -738,7 +782,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow1" href="#num2"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img1">play_arrow</i></span>What is the Registration
+                        class="material-icons prefix arrow-img1">play_arrow</i></span>What
+                    is the Registration
                     fee for
                     hackathon?
                   </h3>
@@ -776,7 +821,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow4" href="#num5"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img4">play_arrow</i></span>What do I get by
+                        class="material-icons prefix arrow-img4">play_arrow</i></span>What
+                    do I get by
                     attending
                     DotSlash?
                   </h3>
@@ -794,7 +840,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow8" href="#num9"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000 text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img8">play_arrow</i></span>What will be the theme
+                        class="material-icons prefix arrow-img8">play_arrow</i></span>What
+                    will be the theme
                     for DotSlash?
                   </h3>
                   <p class="collapse box1" id="num9">Not to worry, you will be provided with variety of theme
@@ -804,7 +851,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow9" href="#num10"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img9 ">play_arrow</i></span>What is the registration
+                        class="material-icons prefix arrow-img9 ">play_arrow</i></span>What
+                    is the registration
                     procedure?
 
                   </h3>
@@ -815,7 +863,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow10" href="#num11"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img10">play_arrow</i></span>What if I've never been
+                        class="material-icons prefix arrow-img10">play_arrow</i></span>What
+                    if I've never been
                     to a
                     hackathon before?
                   </h3>
@@ -829,7 +878,8 @@
                   <h3 data-parent="#accordion" data-toggle="collapse" class="box arrow12" href="#num13"
                     style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000">
                     <span style="vertical-align: sub"><i
-                        class="material-icons prefix arrow-img12">play_arrow</i></span>What will be the mode of
+                        class="material-icons prefix arrow-img12">play_arrow</i></span>What
+                    will be the mode of
                     conduct of hackathon?
                   </h3>
                   <p class="collapse box1" id="num13">Due to the current pandemic situation, mode of conduct will be
