--- a/public/sass/materialize_custom.scss
+++ b/public/sass/materialize_custom.scss
@@ -1,2 +1,2 @@
 $secondary-color: #bd0c0e !default;
-@import 'materialize-css';
+@import '../../node_modules/materialize-css/sass/materialize.scss';
