updates -css bugs removed -mobile view css fixed

--- a/public/sass/_sponsorChallenges.scss
+++ b/public/sass/_sponsorChallenges.scss
@@ -10,7 +10,7 @@
       color: white;
       background-size: cover;
       background-position: center;
-      height: 300px;
+      height: auto;
       padding: 3em;
       background: #313131;
       border-radius: 25px;
