--- a/views/home.hbs
+++ b/views/home.hbs
@@ -682,23 +682,14 @@
 
       <!-- SponsorChallenges -->
       <div id="sponsorChallenges" class="section">
-        <div class="row">
-          <div class="section-title">
-            <h3 class="title"><span style="color: #0b0f28">Sponsor &nbsp;</span><span style="color: #bd0c0e;">
-                Challenges</span>
-            </h3>
-          </div>
+        <div class="section-title">
+          <h3 class="title"><span style="color: #0b0f28">Sponsor &nbsp;</span><span style="color: #bd0c0e;">
+              Challenges</span>
+          </h3>
         </div>
         <div class="container">
-          <div class="row" style="display: flex;
-                          flex-wrap: wrap;
-                          justify-content: center;
-                          align-items: center;">
-
-            <div class="col-md-4 col-sm-4 col-xs-12 flip" style="display: flex;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    align-items: center;">
+          <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-12 flip">
               <div class="front content text-center"
                 style="background: linear-gradient(to top left, #F7736F, #F5372A);">
                 <h2>SASHIDO challenge</h2>
@@ -708,10 +699,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-12 flip" style="display: flex;
-                                flex-wrap: wrap;
-                                justify-content: center;
-                                align-items: center;">
+            <div class="col-md-6 col-sm-6 col-xs-12 flip" >
               <div class="front content text-center"
                 style="background: linear-gradient(to top left, #434343, #000000);">
                 <h2>EchoAR Challenge</h2>
