--- a/views/home.hbs
+++ b/views/home.hbs
@@ -44,19 +44,7 @@
   <link rel="stylesheet" href="./css/herostyles.css">
   <link rel="stylesheet" href="./css/background.css" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
-  <style>
-    .rotate {
-      -webkit-transform: rotate(90deg);
-      -moz-transform: rotate(90deg);
-      filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-      -webkit-transition: all 300ms ease-in-out;
-      -moz-transition: all 300ms ease-in-out;
-      -o-transition: all 300ms ease-in-out;
-      transition: all 300ms ease-in-out;
-    }
-  </style>
-
+  <link rel="stylesheet" href="./css/animated.min.css" />
 </head>
 
 <body>
@@ -197,6 +185,12 @@
               </div>
               <div class="save_the_date zoomIn animated delay-5s">
                 Save the Date
+              </div>
+              <div class="last-date-info animated bounceInUp delay-5s">
+                Last date of registration is 6th Jan
+                <div>
+                  hurry up folks!
+                </div>
               </div>
             </div>
           </div>
