--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -40,6 +40,8 @@ RESPONSIVE
 
 body {
   font-family: 'Poppins', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-display: fallback !important;
   font-size: 16px;
   color: #444;
 }
